// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewRecipeModal NewRecipeModal (as Component) should be a visible modal 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h1>
    Create new recipe
  </h1>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Recipe title"
    multiLine={false}
    onChange={[Function]}
    rows={1}
    type="text"
    underlineShow={true}
    value=""
  />
  <br />
  <br />
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Recipe content"
    multiLine={true}
    onChange={[Function]}
    rows={4}
    rowsMax={6}
    type="text"
    underlineShow={true}
    value=""
  />
  <FlatButton
    disabled={false}
    fullWidth={true}
    label="Create"
    labelPosition="after"
    labelStyle={Object {}}
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
  />
  <FlatButton
    disabled={false}
    fullWidth={true}
    label="Cancel"
    labelPosition="after"
    labelStyle={Object {}}
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
  />
</Modal>
`;

exports[`NewRecipeModal NewRecipeModal (as Component) should be an invisible modal 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  isOpen={false}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h1>
    Create new recipe
  </h1>
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Recipe title"
    multiLine={false}
    onChange={[Function]}
    rows={1}
    type="text"
    underlineShow={true}
    value=""
  />
  <br />
  <br />
  <TextField
    disabled={false}
    floatingLabelFixed={false}
    fullWidth={false}
    hintText="Recipe content"
    multiLine={true}
    onChange={[Function]}
    rows={4}
    rowsMax={6}
    type="text"
    underlineShow={true}
    value=""
  />
  <FlatButton
    disabled={false}
    fullWidth={true}
    label="Create"
    labelPosition="after"
    labelStyle={Object {}}
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
  />
  <FlatButton
    disabled={false}
    fullWidth={true}
    label="Cancel"
    labelPosition="after"
    labelStyle={Object {}}
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
  />
</Modal>
`;
